--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "react-native-befrest",
   "version": "1.0.0",
@@ -8,13 +7,23 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "react-native"
+    "react-native",
+    "push-notification",
+    "befrest",
+    "android",
+    "ios"
   ],
-  "author": "",
+  "author": "Saeed Zhiany",
   "license": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SaeedZhiany/react-native-befrest.git"
+  },
+  "bugs": {
+    "url": "https://github.com/SaeedZhiany/react-native-befrest/issues"
+  },
   "peerDependencies": {
-    "react-native": "^0.41.2",
-    "react-native-windows": "0.41.0-rc.1"
-
+    "react": "*",
+    "react-native": ">=0.50.0"
   }
 }
