--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,6 +2,8 @@ def safeExtGet(prop, fallback) {
     rootProject.ext.has(prop) ? rootProject.ext.get(prop) : fallback
 }
 
+def gradlePluginVersion = safeExtGet('gradlePluginVersion', '3.4.0')
+
 buildscript {
     repositories {
         jcenter()
@@ -9,7 +11,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.1'
+        classpath("com.android.tools.build:gradle:$gradlePluginVersion")
     }
 }
 
@@ -36,7 +38,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.facebook.react:react-native:+'
+    implementation "com.facebook.react:react-native:${safeExtGet('reactnativeVersion', '+')}"
     implementation files('lib/befrest-2.0.1.jar')
 }
   
